Fix email on small screens

--- a/api/public/stylesheets/email.css
+++ b/api/public/stylesheets/email.css
@@ -7,7 +7,7 @@ body {
 
 #root {
   background: #f7f7f7;
-  padding: 50px;
+  padding: 50px 15px;
 }
 
 .content{
